--- a/index.html
+++ b/index.html
@@ -1061,22 +1061,73 @@
         }
 
         .gold-order-option {
-            background: var(--panel-light);
+            background: linear-gradient(160deg, rgba(10, 25, 41, 0.95) 0%, rgba(20, 44, 72, 0.92) 100%);
             border: 2px solid var(--wow-gold-dark);
             color: var(--text);
-            padding: 18px 20px;
-            border-radius: 12px;
+            padding: 0;
+            border-radius: 14px;
             cursor: pointer;
             transition: all 0.3s ease;
             font-weight: 700;
-            text-align: center;
+            text-align: left;
+            overflow: hidden;
+            position: relative;
+            min-height: 220px;
         }
 
         .gold-order-option:hover {
             border-color: var(--wow-gold);
-            color: var(--wow-gold);
-            transform: translateY(-3px);
-            box-shadow: 0 10px 20px rgba(200, 170, 109, 0.25);
+            transform: translateY(-4px);
+            box-shadow: 0 12px 24px rgba(200, 170, 109, 0.28);
+        }
+
+        .gold-order-option-badge {
+            position: absolute;
+            top: 12px;
+            left: 12px;
+            background: linear-gradient(90deg, #a52121, #d45a00);
+            color: #fff;
+            font-size: 0.72rem;
+            font-weight: 800;
+            padding: 4px 9px;
+            border-radius: 999px;
+            z-index: 2;
+            text-transform: uppercase;
+            letter-spacing: 0.4px;
+        }
+
+        .gold-order-option-cover {
+            width: 100%;
+            height: 86px;
+            object-fit: cover;
+            display: block;
+            border-bottom: 1px solid rgba(200, 170, 109, 0.35);
+        }
+
+        .gold-order-option-content {
+            padding: 12px 14px 14px;
+        }
+
+        .gold-order-option-title {
+            color: var(--wow-gold-light);
+            font-size: 1.12rem;
+            margin-bottom: 6px;
+            line-height: 1.2;
+        }
+
+        .gold-order-option-description {
+            color: var(--text-gray);
+            font-size: 0.9rem;
+            margin-bottom: 9px;
+            line-height: 1.35;
+            min-height: 38px;
+        }
+
+        .gold-order-option-meta {
+            color: #7de3a7;
+            font-size: 0.88rem;
+            font-weight: 700;
+            margin-bottom: 2px;
         }
 
         .gold-order-step {
@@ -4689,9 +4740,25 @@
             list.innerHTML = '<p style="color: var(--text-gray);">No hay juegos disponibles.</p>';
             return;
         }
-        list.innerHTML = games.map(game => `
-            <button class="gold-order-option" type="button" data-game="${game}">${game}</button>
-        `).join('');
+
+        list.innerHTML = games.map(game => {
+            const category = goldCategories.find(item => item.game === game) || {};
+            const image = category.image || GAME_IMAGES[game] || GAME_IMAGES.default;
+            const description = category.description || `Compra oro para ${game} con entrega rápida y segura.`;
+            const serversCount = getGoldOrderServers(game).length;
+
+            return `
+            <button class="gold-order-option" type="button" data-game="${game}">
+                <span class="gold-order-option-badge">Compra rápida</span>
+                <img class="gold-order-option-cover" src="${image}" alt="${game}" loading="lazy">
+                <div class="gold-order-option-content">
+                    <div class="gold-order-option-title">${game}</div>
+                    <div class="gold-order-option-description">${description}</div>
+                    <div class="gold-order-option-meta">• ${serversCount} ${serversCount === 1 ? 'servidor disponible' : 'servidores disponibles'}</div>
+                </div>
+            </button>`;
+        }).join('');
+
         list.querySelectorAll('[data-game]').forEach(btn => {
             btn.addEventListener('click', () => {
                 goldOrderState.game = btn.dataset.game || '';
