--- a/index.html
+++ b/index.html
@@ -3683,7 +3683,7 @@
 
         <div class="form-group">
             <label class="form-label">Vista previa</label>
-            <img id="gold-category-image-preview" alt="Vista previa categoría" style="width:100%; max-height:180px; object-fit:cover; border:2px solid var(--wow-gold-dark); border-radius:10px;" src="https://upload.wikimedia.org/wikipedia/en/9/9a/Old_School_RuneScape_logo.png">
+            <img id="gold-category-image-preview" alt="Vista previa categoría" style="width:100%; max-height:180px; object-fit:cover; border:2px solid var(--wow-gold-dark); border-radius:10px;" src="https://i.imgur.com/ynvAS9B.png">
         </div>
 
         <div style="display: flex; gap: 20px; margin-top: 40px;">
@@ -3808,23 +3808,23 @@
 
     // URLs de Imgur reales para ejemplos
     const IMGUR_IMAGE_URLS = {
-        turtleWow1: "https://upload.wikimedia.org/wikipedia/en/5/56/World_of_Warcraft_-_The_Burning_Crusade_logo.png",
+        turtleWow1: "https://i.imgur.com/ynvAS9B.png",
         turtleWow2: "https://i.imgur.com/uCclv8s.png",
-        albionOnline: "https://upload.wikimedia.org/wikipedia/en/8/80/Albion_Online_Logo.png",
-        wowRetail: "https://upload.wikimedia.org/wikipedia/commons/8/8d/World_of_Warcraft_Logo.png",
+        albionOnline: "https://i.imgur.com/ynvAS9B.png",
+        wowRetail: "https://i.imgur.com/ynvAS9B.png",
         wowClassic: "https://i.imgur.com/4L8zKqX.png",
         wowMage: "https://i.imgur.com/QRf9Cm4.jpeg",
         wowWarrior: "https://i.imgur.com/vL6TmbD.jpeg",
-        goldCoins: "https://upload.wikimedia.org/wikipedia/en/9/9a/Old_School_RuneScape_logo.png"
+        goldCoins: "https://i.imgur.com/ynvAS9B.png"
     };
 
     // Imágenes para juegos
     const GAME_IMAGES = {
-        'Turtle WoW': 'https://upload.wikimedia.org/wikipedia/en/5/56/World_of_Warcraft_-_The_Burning_Crusade_logo.png',
-        'World of Warcraft': 'https://upload.wikimedia.org/wikipedia/commons/8/8d/World_of_Warcraft_Logo.png',
-        'Albion Online': 'https://upload.wikimedia.org/wikipedia/en/8/80/Albion_Online_Logo.png',
-        'Runescape': 'https://upload.wikimedia.org/wikipedia/en/9/9a/Old_School_RuneScape_logo.png',
-        'default': 'https://upload.wikimedia.org/wikipedia/en/9/9a/Old_School_RuneScape_logo.png'
+        'Turtle WoW': LOGO_URL,
+        'World of Warcraft': LOGO_URL,
+        'Albion Online': LOGO_URL,
+        'Runescape': LOGO_URL,
+        'default': LOGO_URL
     };
 
     // Datos de ejemplo - Cuentas CON IMÁGENES REALES DE IMGUR
@@ -3917,7 +3917,7 @@
             game: "Turtle WoW",
             server: "Nordanaar",
             description: "Compra oro para Turtle WoW con entrega segura y rápida.",
-            image: "https://upload.wikimedia.org/wikipedia/en/5/56/World_of_Warcraft_-_The_Burning_Crusade_logo.png"
+            image: "https://i.imgur.com/ynvAS9B.png"
         },
         {
             id: 2,
@@ -3925,7 +3925,7 @@
             game: "Albion Online",
             server: "Americas",
             description: "Silver de Albion Online con stock actualizado diariamente.",
-            image: "https://upload.wikimedia.org/wikipedia/en/8/80/Albion_Online_Logo.png"
+            image: "https://i.imgur.com/ynvAS9B.png"
         },
         {
             id: 3,
@@ -3933,7 +3933,7 @@
             game: "World of Warcraft",
             server: "Retail",
             description: "Oro para WoW Retail y Classic con soporte 24/7.",
-            image: "https://upload.wikimedia.org/wikipedia/commons/8/8d/World_of_Warcraft_Logo.png"
+            image: "https://i.imgur.com/ynvAS9B.png"
         },
         {
             id: 4,
@@ -3941,7 +3941,7 @@
             game: "Runescape",
             server: "OSRS",
             description: "Oro para Old School RuneScape y cuentas verificadas.",
-            image: "https://upload.wikimedia.org/wikipedia/en/9/9a/Old_School_RuneScape_logo.png"
+            image: "https://i.imgur.com/ynvAS9B.png"
         }
     ];
 
@@ -6568,7 +6568,13 @@
 
         const normalized = normalizeImageUrl(raw);
         if (!normalized) {
-            return getGameImage(game);
+            return getGameImage(game) || LOGO_URL;
+        }
+
+        const blockedHost = /(imgur\.com|prnt\.sc|postimg\.cc)/i.test(normalized);
+        const hasImageExt = /\.(jpg|jpeg|png|gif|webp|svg)(\?.*)?$/i.test(normalized);
+        if (blockedHost || !hasImageExt) {
+            return getGameImage(game) || LOGO_URL;
         }
 
         return normalized;
