--- a/index.html
+++ b/index.html
@@ -3818,13 +3818,18 @@
         goldCoins: "https://i.imgur.com/ynvAS9B.png"
     };
 
-    // Imágenes para juegos
+    function generateGameCoverDataUrl(game = 'Epic Gold Shop') {
+        const safe = encodeURIComponent(game.slice(0, 24));
+        return `data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='800' height='320' viewBox='0 0 800 320'><defs><linearGradient id='g' x1='0' x2='1' y1='0' y2='1'><stop offset='0' stop-color='%230c1c2c'/><stop offset='1' stop-color='%231a365d'/></linearGradient></defs><rect width='800' height='320' fill='url(%23g)'/><circle cx='730' cy='-10' r='160' fill='%23c8aa6d' opacity='0.10'/><circle cx='0' cy='320' r='180' fill='%23c8aa6d' opacity='0.08'/><text x='40' y='175' fill='%23f7e7a0' font-family='Segoe UI, Arial' font-size='46' font-weight='700'>${safe}</text><text x='40' y='220' fill='%23e8d8a6' font-family='Segoe UI, Arial' font-size='24'>Epic Gold Shop</text></svg>`;
+    }
+
+    // Imágenes para juegos (mecanismo global tipo logo, pero con portada por juego)
     const GAME_IMAGES = {
-        'Turtle WoW': LOGO_URL,
-        'World of Warcraft': LOGO_URL,
-        'Albion Online': LOGO_URL,
-        'Runescape': LOGO_URL,
-        'default': LOGO_URL
+        'Turtle WoW': generateGameCoverDataUrl('Turtle WoW'),
+        'World of Warcraft': generateGameCoverDataUrl('World of Warcraft'),
+        'Albion Online': generateGameCoverDataUrl('Albion Online'),
+        'Runescape': generateGameCoverDataUrl('Runescape'),
+        'default': generateGameCoverDataUrl('Epic Gold Shop')
     };
 
     // Datos de ejemplo - Cuentas CON IMÁGENES REALES DE IMGUR
@@ -4701,11 +4706,7 @@
     }
 
     function getGoldOrderGames() {
-        const goldCategoryGames = new Set(getGoldCategoryGames());
-        const games = gameServers
-            .map(server => server.game)
-            .filter(game => game && goldCategoryGames.has(game));
-        return Array.from(new Set(games)).sort();
+        return getGoldCategoryGames();
     }
 
     function getGoldOrderServers(game) {
@@ -4744,7 +4745,7 @@
             return `
             <button class="gold-order-option" type="button" data-game="${game}">
                 <span class="gold-order-option-badge">Compra rápida</span>
-                <img class="gold-order-option-cover" src="${image}" alt="${game}" loading="lazy" onerror="this.onerror=null;this.src='${GAME_IMAGES.default}';">
+                <img class="gold-order-option-cover" src="${image}" alt="${game}" loading="lazy" onerror="this.onerror=null;this.src='${getGameImage(game)}';">
                 <div class="gold-order-option-content">
                     <div class="gold-order-option-title">${game}</div>
                     <div class="gold-order-option-description">${description}</div>
@@ -6057,7 +6058,7 @@
                             <div style="flex: 1; min-width: 0;">
                                 <div style="display: flex; align-items: center; gap: 20px; margin-bottom: 15px;">
                                     <div style="width: 80px; height: 80px; background: rgba(200, 170, 109, 0.1); border-radius: 50%; border: 2px solid var(--wow-gold); display: flex; align-items: center; justify-content: center;">
-                                        <img src="${resolveCategoryImage(category)}" alt="${category.game}" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;" onerror="this.onerror=null;this.src='${GAME_IMAGES.default}';">
+                                        <img src="${resolveCategoryImage(category)}" alt="${category.game}" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;" onerror="this.onerror=null;this.src='${getGameImage(category.game)}';">
                                     </div>
                                     <div style="flex: 1;">
                                         <h4 style="color: var(--text); margin-bottom: 8px; font-size: 1.3rem; word-break: break-word;">${category.name}</h4>
@@ -6568,13 +6569,7 @@
 
         const normalized = normalizeImageUrl(raw);
         if (!normalized) {
-            return getGameImage(game) || LOGO_URL;
-        }
-
-        const blockedHost = /(imgur\.com|prnt\.sc|postimg\.cc)/i.test(normalized);
-        const hasImageExt = /\.(jpg|jpeg|png|gif|webp|svg)(\?.*)?$/i.test(normalized);
-        if (blockedHost || !hasImageExt) {
-            return getGameImage(game) || LOGO_URL;
+            return getGameImage(game);
         }
 
         return normalized;
